# my

./: .gemini_instructions.md  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  PACKAGE_SUMMARY.md  README_AR.md  comparison_original_vs_enhanced.md  main.py  prom.md  pyproject.toml  requirements.txt  usage_examples.md
.claude/agents/: debug-specialist.md  systematic-troubleshooter.md  technical-planner.md
.kilocode/: system-prompt-orchestrator
.serena/: project.yml
backend/: main.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
المشروع/: QUICK_START (1).md  README (1).md  Session details.txt  enhanced_analyzer (1).py  requirements (2).txt
