[project]
name = "myapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.32.0",
    "instructor>=1.13.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.18.0",
    "aiofiles>=25.1.0",
    "python-dotenv>=1.2.1",
    "rich>=13.7.0",
    "typing-extensions>=4.10.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.21",
]
